# games

./: Cargo.toml  README.md
breakout/: Cargo.toml
breakout/resources/: level1  level2  level3  level5
breakout/src/: bouncing_controls.rs  game_logic.rs  level.rs  main.rs  player_controls.rs
mage/: Cargo.toml  README.md
mage/examples/: basic_physics.rs  fixed_camera.rs  fixed_camera_with_engine.rs  opengl_abstractions.rs
mage/examples/resources/shaders/: basic_fragment.glsl  basic_vertex.glsl
mage/shaders/: material.glsl  simple-rendering-fragment.glsl  simple-rendering-vertex.glsl
mage/src/: lib.rs
mage/src/core/: game.rs  mod.rs  system.rs  window.rs  world.rs
mage/src/gameplay/: input.rs  mod.rs  quit.rs
mage/src/gameplay/camera/: fixed.rs  fixed2d.rs  mod.rs
mage/src/gameplay/particles/: components.rs  mod.rs  particles.rs  system.rs
mage/src/physics/: mod.rs  scalable_shape.rs
mage/src/physics/engine/: mod.rs
mage/src/rendering/: mod.rs
mage/src/rendering/engine/: mod.rs  simple.rs
mage/src/rendering/model/: cube.rs  mesh.rs  mod.rs  plane.rs  quad.rs  sphere.rs
mage/src/rendering/opengl/: buffer.rs  frame_buffer.rs  mod.rs  multiple_render_target.rs  ping_pong_frame_buffer.rs  program.rs  render_buffer.rs  shader.rs  texture.rs  vertex_array.rs
mage/src/resources/: shader.rs  texture.rs
