[package]
name = "breakout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
hecs = "0.7.6"
log = "0.4.14"
mage = { path = "../mage" }
nalgebra = "0.31.0"
sdl2 = "0.35.2"
thiserror = "1.0.30"
