[package]
name = "mage"
version = "0.1.0"
edition = "2021"

[dependencies]
approx = "0.5.1"
gl = "0.14.0"
hecs = "0.7.6"
image = "0.24.0"
include_dir = "0.7.2"
itertools = "0.10.3"
log = "0.4.14"
nalgebra = "0.31.0"
num-traits = "0.2.14"
rapier3d = "0.12.0"
regex = "1.5.4"
russimp = "1.0.1"
sdl2 = "0.35.2"
thiserror = "1.0.30"

[dev-dependencies]
env_logger = "0.9.0"
